--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "artorial",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=20 <23"
+  },
   "scripts": {
     "dev": "next dev -p 3003",
     "build": "next build",
