fix: node バージョン

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": ">=20 <23"
+    "node": "17.1.x"
   },
   "scripts": {
     "dev": "next dev -p 3003",
