feat: Dockerize artorial

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "20.19.x"
+    "node": "22.19.0"
   },
   "scripts": {
     "dev": "next dev -p 3003",
