--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "react-to-print": "^3.1.1",
     "sharp": "^0.34.3",
     "zustand": "^5.0.8"
   },
